# dotfiles-fedora

./: .Xresources  .dircolors  .gitconfig  .gitignore  .setup_fedora.sh  README.md  setup_fedora.sh
.config/: rofimoji.rc  starship.toml
.config/bat/: config
.config/dunst/: dunstrc  test_notifications.sh
.config/fish/: config.fish  fish_plugins  fish_variables
.config/fish/completions/: asdf.fish  mdcat.fish
.config/fish/conf.d/: fish-exa.fish
.config/fish/functions/: calc.fish  cat.fish  cleanup.fish  dotfiles.fish  fromunixtime.fish  jqs.fish  ll.fish  mkdir.fish  now.fish  parquet.fish  qtile-log.fish  tolocaltime.fish  tounixtime.fish  tree.fish  utcnow.fish
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: settings.ini
.config/gtk-4.0/: settings.ini
.config/kitty/: base16-material-darker-256.conf  kitty.conf
.config/qtile/: .gitignore  .pre-commit-config.yaml  autostart.sh  chrome_profile.sh  config.py  pyproject.toml  setup.cfg  validate.py
.config/qtile/qtile_config/: __init__.py  groups.py  keys.py  layouts.py  monadthreecol.py  mouse.py  screens.py  theme.py
.config/qtile/qtile_config/widgets/: cpu.py  memory.py
.config/rofi/: config.rasi  file-browser  material_darker.rasi  rofi-copyq.py  rofi-search.sh  rofi.sh
